# rustybits

./: .gitignore  Cargo.toml  DEEP_DIVE.md  README.md  VSCODE_SETUP.md  debugging.md  deep_dive.md  deep_dive1.md  embedded_rust_primer.md  hardware.md  readme.md  readme1.md  rustfmt.toml  vscode_setup.md  vscode_setup1.md
example_01_hello_world/: Cargo.toml  README.md  readme.md  readme1.md  technical_details.md
example_01_hello_world/src/: main.rs
example_02_hello_world_minimal_dependencies/: Cargo.toml  README.md  memory.x  readme.md
example_02_hello_world_minimal_dependencies/src/: main.rs
example_03_hello_world_asm/: Cargo.toml  link.x  readme.md
example_03_hello_world_asm/.cargo/: config.toml
example_03_hello_world_asm/src/: main.rs
example_03_hello_world_no_dependencies/: Cargo.toml  memory.x  readme.md
example_03_hello_world_no_dependencies/src/: main.rs
example_04_hello_world_asm/: Cargo.toml  minimal.ld  readme.md
example_05_buttons_polled/: Cargo.toml  readme.md
example_05_buttons_polled/src/: main.rs
example_06_buttons_interrupts/: Cargo.toml  readme.md
example_06_buttons_interrupts/src/: main.rs
example_07_rtt_MCU_to_PC/: Cargo.toml  readme.md
example_07_rtt_MCU_to_PC/.cargo/: config.toml
example_07_rtt_output/: readme.md
example_07_rtt_output/src/: main.rs
example_08_rtt_bidirectional/: Embed.toml  readme.md
example_08_rtt_bidirectional/src/: main.rs
example_09_onboard_triax/: Cargo.toml  accelerometer_id_trace.md  readme.md  technical_details.md
example_09_onboard_triax/src/: main.rs
