[workspace]
members = [
    "example_01_hello_world",
    "example_02_hello_world_minimal_dependencies",
]
resolver = "2"

# ============================================================================
# WORKSPACE CONFIGURATION
# ============================================================================
# This is a Cargo workspace containing multiple independent examples.
# Each example has its own Cargo.toml with specific dependencies.
#
# To run examples:
#   cd example_01_hello_world && cargo run
#   cd example_02_hello_world_minimal_dependencies && cargo run
# ============================================================================
